src/objects/loan__Scheduled_Queries__c.object
<CustomObject>
    <fields>
        <fullName>loan__Completed_Runs__c</fullName>
        <label>Completed Runs</label>
        <summaryFilterItems>
            <field>loan__Archive_Run__c.loan__Completed__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Archive_Run__c.loan__Scheduled_Queries__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__ObjectApiName__c</fullName>
        <label>ObjectApiName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>loan__Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Run_Every_Units__c</fullName>
        <label>Day/Week</label>
        <picklist>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Run_Every__c</fullName>
        <label>Run Every</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__ScheduledDate__c</fullName>
        <label>ScheduledDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Unfinished_Runs__c</fullName>
        <label>Unfinished Runs</label>
        <summaryFilterItems>
            <field>loan__Archive_Run__c.loan__Completed__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Archive_Run__c.loan__Scheduled_Queries__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Scheduled Query</label>
    <nameField>
        <displayFormat>SQ-{0000}</displayFormat>
        <label>SchedulingQueries Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>